# wolf-sgminer-vanilla-public

./: Makefile.am  Makefile.in  README.md  aclocal.m4  algorithm.c  algorithm.h  configure  configure.ac  findnonce.c  ocl.c  sgminer.c
algorithm/: whirlpoolx.c  whirlpoolx.h
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
kernel/: whirlpoolx-wolf.cl
ocl/: build_kernel.c  build_kernel.h
